<resources>
    <string name="app_name">XChat</string>
    <string name="ok">ok</string>
    <string name="name">Name</string>
    <string name="message">message</string>
    <string name="send">send</string>
    <string name="profile_photo">profile photo</string>
    <string name="profile_name">profile name</string>
    <string name="my_profile">My Profile</string>
    <string name="setting">Setting</string>
    <string name="name_change">name</string>
    <string name="photo_change">photo</string>
    <string name="alert_name">name</string>
    <string name="login">login</string>
    <string name="p_number">phone number</string>
    <string name="username">user name</string>
    <string name="next">next</string>
    <string name="profile_view">image</string>
    <string name="sent_message_body">hello</string>
    <string name="received_message_body">hi</string>
    <string name="verify">verify</string>
    <string name="your_phone">phone number</string>
    <string name="code">code</string>
    <string name="send_verification_code">continue</string>
    <string name="start">start</string>
    <string name="button">Button</string>
    <string name="tab1">Tab1</string>
    <string name="tab2">Tab2</string>
    <string name="tab3">Tab3</string>
    <string name="empty">select profile to chat</string>
    <string name="log_out">sign out</string>
    <string name="name_blank">name:</string>
    <string name="attach">attach</string>
    <string name="barText">0%</string>
    <string name="font">chat font</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="search">search</string>
    <string name="reply_message">enter message</string>
    <string name="reply">reply</string>
    <string name="remove_photo">remove photo</string>
    <string name="itemPrefixFlag">TODO</string>
    <string name="itemPrefix">TextView</string>
</resources>
