<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/small"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/medium"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/large"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginTop="50dp"/>
</LinearLayout>