<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background">

    <EditText
        android:id="@+id/reply_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/round_message"
        android:ems="10"
        android:gravity="start|center"
        android:hint="@string/reply_message"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="2000"
        android:maxLines="5"
        android:minLines="2"
        android:paddingEnd="23dp"
        android:paddingLeft="23dp"
        android:paddingRight="23dp"
        android:paddingStart="23dp"
        android:scrollbars="vertical"
        android:textColor="?android:attr/colorActivatedHighlight"
        android:textColorHighlight="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/reply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <ImageButton
        android:id="@+id/reply"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/send_button"
        android:contentDescription="@string/reply"
        android:src="@drawable/send_button"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>